--- a/css/agency.css
+++ b/css/agency.css
@@ -150,8 +150,8 @@ h6 {
 }/* navbar list滑鼠經過時的顏色 */
 .navbar-default .navbar-nav > .active > a {
   border-radius: 0;
-  color: #5abdbd;
-  background-color: #222222;
+  color: #222222;
+  background-color: #e0c6bc;
 }/* navbar list捲動時跳到的顏色 */
 
 .navbar-default .navbar-nav > .active > a:hover,
@@ -163,11 +163,11 @@ h6 {
 /* 大螢幕設定 */
 @media (min-width: 768px) {
   .navbar-default {
-    background-color: #f4f4f4;/* 滑動前navbar顏色大小 */
+    background-color: #ffe2d6;/* 滑動前navbar顏色大小 */
     padding: 60px 0;
-    -webkit-transition: padding 0.3s;
-    -moz-transition: padding 0.3s;
-    transition: padding 0.3s;
+    -webkit-transition: padding 0.7s;
+    -moz-transition: padding 0.7s;
+    transition: padding 0.7s;
     border: none;
   }
   .navbar-default .navbar-brand {
@@ -181,12 +181,12 @@ h6 {
     border-radius: 3px;
   }
   .navbar-default.navbar-shrink {
-    background-color: #222222;/* 滑動後navbar顏色大小 */
+    background-color: #e0c6bc;/* 滑動後navbar顏色大小 */
     padding: 5px 0;
   }
   .navbar-default.navbar-shrink .navbar-brand {
     font-size: 1.5em;
-    color: #f4f4f4;/* 滑動後brand顏色 */
+    color: #222222;/* 滑動後brand顏色 */
   }
 }
 header {
