--- a/css/agency.css
+++ b/css/agency.css
@@ -213,6 +213,7 @@ h6 {
   .navbar-default .navbar-brand {
     font-size: 2.3em;
     color: #222222;
+    /* font-weight:bold;*/
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     transition: all 0.3s;
