--- a/css/agency.css
+++ b/css/agency.css
@@ -92,23 +92,23 @@ h6 {
   }
 
 .content-section-a {
-      padding: 20px 0px 10px 0px;
-      background-color: #FaFaFa;
+      padding: 50px 0px 30px 0px;
+      background-color: #fff9f6;
   }
 
 .content-section-b {
-      padding: 20px 0px 10px 0px;
+      padding: 5px 0px 30px 0px;
       border-top: 2px solid #f0e3df;
       border-bottom: 2px solid #f0e3df;
       background-color: #fff6f3;
   }
-  .copyright {
+.copyright {
     font-family: "cwTeXMing","Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #888888;
     padding-top: 8px;
     padding-bottom: 2px;
   }
-  .section-heading-spacer {
+.section-heading-spacer {
       float: left;
       width: 10px;
       border-top: 0px solid #e7e7e7;
