--- a/css/agency.css
+++ b/css/agency.css
@@ -60,16 +60,13 @@ a:hover,
 a:focus,
 a:active,
 a.active {
-  outline: none;
 }
 a {
-  color: #fed136;
 }
 a:hover,
 a:focus,
 a:active,
 a.active {
-  color: #fec503;
 }
 h1,
 h2,
@@ -82,9 +79,9 @@ h6 {
   font-weight: 700;
 }
 .lead {
-  font:18px "Microsoft JhengHei",  sans-serif;
+  font:16px "Microsoft JhengHei",  sans-serif;
   font-weight: 400;
-  letter-spacing: 1.1px;
+  letter-spacing: 0.5px;
   margin:0 0 20px;
   line-height: 1.8;
   text-align: justify;/* 左右對齊 */
@@ -92,12 +89,12 @@ h6 {
   }
 
 .content-section-a {
-      padding: 50px 0px 30px 0px;
+      padding: 0px 0px 0px 0px;
       background-color: #fff9f6;
   }
 
 .content-section-b {
-      padding: 5px 0px 30px 0px;
+      padding: 10px 0px 15px 0px;
       border-top: 2px solid #f0e3df;
       border-bottom: 2px solid #f0e3df;
       background-color: #fff6f3;
@@ -194,6 +191,26 @@ h6 {
 
 /* 大螢幕設定 */
 @media (min-width: 768px) {
+.content-section-a {
+        padding: 50px 0px 30px 0px;
+        background-color: #fff9f6;
+}
+.content-section-b {
+      padding: 30px 0px 65px 0px;
+      border-top: 2px solid #f0e3df;
+      border-bottom: 2px solid #f0e3df;
+      background-color: #fff6f3;
+}
+.lead {
+  font:18px "Microsoft JhengHei",  sans-serif;
+  font-weight: 400;
+  letter-spacing: 0.5px;
+  margin:0 0 20px;
+  line-height: 1.8;
+  text-align: justify;/* 左右對齊 */
+  text-justify:inter-ideograph;/* 左右對齊 */
+  }
+
 /* 滑動前navbar顏色&大小 */
   .navbar-default {
     background-color: #FFF6F2;
