--- a/css/agency.css
+++ b/css/agency.css
@@ -14,7 +14,7 @@
         url(//fonts.gstatic.com/ea/cwtexming/v3/cwTeXMing-zhonly.woff) format('woff'),
         url(//fonts.gstatic.com/ea/cwtexming/v3/cwTeXMing-zhonly.ttf) format('truetype');
  }
- @font-face {
+ /*@font-face {
    font-family: 'cwTeXHei';
    font-style: normal;
    font-weight: 500;
@@ -23,7 +23,7 @@
         url(//fonts.gstatic.com/ea/cwtexhei/v3/cwTeXHei-zhonly.woff2) format('woff2'),
         url(//fonts.gstatic.com/ea/cwtexhei/v3/cwTeXHei-zhonly.woff) format('woff'),
         url(//fonts.gstatic.com/ea/cwtexhei/v3/cwTeXHei-zhonly.ttf) format('truetype');
-      }
+      }*/
 body,
 {
 }
