--- a/css/agency.css
+++ b/css/agency.css
@@ -3,8 +3,9 @@
  * Copyright 2013-2016 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
-
- @font-face {
+@import url(http://fonts.googleapis.com/earlyaccess/cwtexming.css);
+@import url(http://fonts.googleapis.com/earlyaccess/cwtexhei.css);
+ /*@font-face {
    font-family: 'cwTeXMing';
    font-style: normal;
    font-weight: 500;
@@ -13,7 +14,7 @@
         url(//fonts.gstatic.com/ea/cwtexming/v3/cwTeXMing-zhonly.woff2) format('woff2'),
         url(//fonts.gstatic.com/ea/cwtexming/v3/cwTeXMing-zhonly.woff) format('woff'),
         url(//fonts.gstatic.com/ea/cwtexming/v3/cwTeXMing-zhonly.ttf) format('truetype');
- }
+ }*/
  /*@font-face {
    font-family: 'cwTeXHei';
    font-style: normal;
