--- a/css/backTop.css
+++ b/css/backTop.css
@@ -27,3 +27,7 @@
      background:url(../img/uparr-48-b.png) no-repeat center center rgba(81,217,187,0.9);
     border:1px solid #fff;
 }
+#backTop.lemonade{
+     background:url(../img/uparr-48-b.png) no-repeat center center rgba(223, 227, 229, 0.5);
+    border:1px solid #ccc;
+}
