--- a/css/agency.css
+++ b/css/agency.css
@@ -220,7 +220,7 @@ a.active {
   .navbar-default .navbar-brand {
     font-size: 2.3em;
     color: #222222;
-    /* font-weight:bold;*粗體看起來很不秀麗/
+    /* font-weight:bold;粗體看起來很不秀麗*/
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     transition: all 0.3s;
@@ -230,7 +230,7 @@ a.active {
     font-size: 2.3em;
     color: #222222;
   }*/
-  .navbar-default .navbar-nav > .active > a {
+.navbar-default .navbar-nav > .active > a {
     border-radius: 3px;
   }
 /* navbar list捲動時跳到的顏色 */
