--- a/css/suzuran.css
+++ b/css/suzuran.css
@@ -66,7 +66,7 @@ a:focus,
 a:active,
 a.active {
 }
-.lead {
+.content {
   font:16px "Microsoft JhengHei",  sans-serif;
   font-weight: 400;
   letter-spacing: 0.5px;
