--- a/css/suzuran.css
+++ b/css/suzuran.css
@@ -3,17 +3,26 @@
  * Copyright 2013-2016 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
-@import url(http://fonts.googleapis.com/earlyaccess/cwtexming.css);
-@import url(http://fonts.googleapis.com/earlyaccess/cwtexhei.css);
+
+
+
+@font-face {
+    font-family: 'honokamin';
+    src: url('honokamin.ttf');
+
+    font-weight: normal;
+    font-style: normal;
+
+}
  /*@font-face {
-   font-family: 'cwTeXMing';
+   font-family: 'honokamin';
    font-style: normal;
    font-weight: 500;
-   src: url(//fonts.gstatic.com/ea/cwtexming/v3/cwTeXMing-zhonly.eot);
-   src: url(//fonts.gstatic.com/ea/cwtexming/v3/cwTeXMing-zhonly.eot?#iefix) format('embedded-opentype'),
-        url(//fonts.gstatic.com/ea/cwtexming/v3/cwTeXMing-zhonly.woff2) format('woff2'),
-        url(//fonts.gstatic.com/ea/cwtexming/v3/cwTeXMing-zhonly.woff) format('woff'),
-        url(//fonts.gstatic.com/ea/cwtexming/v3/cwTeXMing-zhonly.ttf) format('truetype');
+   src: url(//fonts.gstatic.com/ea/honokamin/v3/honokamin-zhonly.eot);
+   src: url(//fonts.gstatic.com/ea/honokamin/v3/honokamin-zhonly.eot?#iefix) format('embedded-opentype'),
+        url(//fonts.gstatic.com/ea/honokamin/v3/honokamin-zhonly.woff2) format('woff2'),
+        url(//fonts.gstatic.com/ea/honokamin/v3/honokamin-zhonly.woff) format('woff'),
+        url(//fonts.gstatic.com/ea/honokamin/v3/honokamin-zhonly.ttf) format('truetype');
  }*/
  /*@font-face {
    font-family: 'cwTeXHei';
@@ -34,7 +43,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "cwTeXMing",serif;
+  font-family: "honokamin",serif;
   font-weight: 700;
 }
 
@@ -95,7 +104,7 @@ a.active {
 }
 
 .banner{
-      font-family: "cwTeXMing",serif;
+      font-family: "honokamin",serif;
       padding: 5px 0px 5px 0px;
       border-top: 1px solid #151515;
       background-color: #FFF6F2;
@@ -106,7 +115,7 @@ a.active {
       background-color: #151515;
 }
 .copyright {
-    font-family: "cwTeXMing",serif;
+    font-family: "honokamin",serif;
     color: #888888;
     padding-top: 8px;
     padding-bottom: 2px;
@@ -119,7 +128,7 @@ a.active {
 .navbar-default .navbar-brand {
   color: #222222;
   font-size: 1.9em;
-  font-family: "cwTeXMing",serif;
+  font-family: "honokamin",serif;
 }
 /* navbar brand與滑鼠互動字型
 .navbar-default .navbar-brand:hover,
