--- a/css/suzuran.css
+++ b/css/suzuran.css
@@ -134,6 +134,9 @@ font-family: "cwtexming",serif;
 /* navbar底色=小裝置 */
 .navbar-default {
   background-color: #FFF6F2;
+  padding: 7px 0 1px 0;
+  border-top: 2px solid #151515;
+  border-bottom: 1px solid #f0e3df;
 }
 /* navbar brand字型=小裝置 */
 .navbar-default .navbar-brand {
@@ -224,7 +227,7 @@ font-family: "cwtexming",serif;
 /* 滑動前navbar顏色&大小 */
   .navbar-default {
     background-color: #FFF6F2;
-    padding: 10px 0;
+    padding: 10px 0 0 0;
     -webkit-transition: padding 0.7s;
     -moz-transition: padding 0.7s;
     transition: padding 0.7s;
